Do not support Java 11 yet for the removal of java.se.ee